Flux query endpoint enabled

--- a/influxdb/influxdb.conf
+++ b/influxdb/influxdb.conf
@@ -206,7 +206,10 @@
 
 [http]
   # Determines whether HTTP endpoint is enabled.
-  # enabled = true
+  enabled = true
+
+  # Determines whether the Flux query endpoint is enabled
+  flux-enabled = true
 
   # The bind address used by the HTTP service.
   # bind-address = ":8086"
